appId: com.colota
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Settings"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Tracking Profiles"
    direction: DOWN
- tapOn: "Tracking Profiles"
- waitForAnimationToEnd
- tapOn: "Create Profile"
- waitForAnimationToEnd
- takeScreenshot: TrackingProfiles
